--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
+    "minio": "^8.0.6",
+    "mongomq2": "^1.4.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reactflow": "^11.11.4",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
